@@ -627,3 +627,6 @@ city_work_radius = 2
 ;   cultural-min-2: Like "cultural" except cities can always work their standard 20 tiles.
 ;   cultural-or-adjacent: Cities can work tiles in their direct cultural borders plus any tiles adjacent to those.
 work_area_limit = none
+
+; The maximum distance it's possible to rebase an aircraft equals its operational range times this value. For standard game rules, set to 6.
+rebase_range_multiplier = 6
