@@ -1,3 +1,4 @@
+- Adjustable rebase range as multiple of operational range, setting named rebase_range_multiplier
 - Option not to draw capital cities larger than they really are, named do_not_make_capital_cities_appear_larger
 - Fix city screen zooming out for adjacent tiles that aren't actually workable due to maximum work radius
 
